Adicionado o arquivo `_header.css`, Criação do Header e modificação

--- a/index.html
+++ b/index.html
@@ -15,7 +15,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- ## End Meta Tags -->
     <link rel="stylesheet" href="./assets/css/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+      integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>VANDERSON.DEV</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header-main">
+      <a href="index.html"
+        ><h1 class="logo">VANDERSON<span class="logo-span">.DEV</span></h1></a
+      >
+
+      <aside class="social-media">
+        <a
+          class="icon-header"
+          href="https://www.linkedin.com/in/vanderson-as/"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><i class="fa-brands fa-linkedin"></i
+        ></a>
+        <a
+          class="icon-header"
+          href="https://github.com/vanderson-as"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><i class="fa-brands fa-square-github"></i
+        ></a>
+        <a
+          class="icon-header"
+          href="http://#"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+      </aside>
+    </header>
+  </body>
 </html>
