Criação e estilização do header

--- a/index.html
+++ b/index.html
@@ -26,33 +26,35 @@
   </head>
   <body>
     <header class="header-main">
-      <a href="index.html"
-        ><h1 class="logo">VANDERSON<span class="logo-span">.DEV</span></h1></a
-      >
+      <div class="container-header">
+        <a href="index.html"
+          ><h1 class="logo">VANDERSON<span class="logo-span">.DEV</span></h1></a
+        >
 
-      <aside class="social-media">
-        <a
-          class="icon-header"
-          href="https://www.linkedin.com/in/vanderson-as/"
-          target="_blank"
-          rel="noopener noreferrer"
-          ><i class="fa-brands fa-linkedin"></i
-        ></a>
-        <a
-          class="icon-header"
-          href="https://github.com/vanderson-as"
-          target="_blank"
-          rel="noopener noreferrer"
-          ><i class="fa-brands fa-square-github"></i
-        ></a>
-        <a
-          class="icon-header"
-          href="http://#"
-          target="_blank"
-          rel="noopener noreferrer"
-          ><i class="fa-brands fa-instagram"></i
-        ></a>
-      </aside>
+        <aside class="social-media">
+          <a
+            class="icon-header"
+            href="https://www.linkedin.com/in/vanderson-as/"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a
+            class="icon-header"
+            href="https://github.com/vanderson-as"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fa-brands fa-square-github"></i
+          ></a>
+          <a
+            class="icon-header"
+            href="http://#"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+        </aside>
+      </div>
     </header>
   </body>
 </html>
