Reorganização de diretorios e criação da section hero

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <title>VANDERSON.DEV</title>
   </head>
   <body>
+    <!-- // INICIO DO HEADER -->
     <header class="header-main">
       <div class="container-header">
         <a href="index.html"
@@ -56,5 +57,23 @@
         </aside>
       </div>
     </header>
+    <!-- ## FIM DO HEADER -->
+    <section class="section-hero">
+      <div class="hero-headline">
+        <h2 class="headline">
+          Apaixonado por desenvolvimento backend
+        </h2>
+        <h3 class="subheadline">
+          Estudante de Análise e Desenvolvimento de Sistemas, explorando Node.js
+          e MongoDB enquanto crio projetos funcionais e dinâmicos.
+        </h3>
+      </div>
+      <div class="hero-img">
+        <img
+          src="assets/img/image-hero.png"
+          alt="Rosto do desenvolvedor Vanderson Andrade"
+        />
+      </div>
+    </section>
   </body>
 </html>
